--- a/common.blocks/matrix/matrix.css
+++ b/common.blocks/matrix/matrix.css
@@ -1,13 +1,13 @@
-.table {
+.matrix {
   border: 1px solid #000;
   border-collapse: collapse;
 }
 
-.table_td {
+.matrix_td {
   border: 1px solid #000;
 }
 
-.table_input {
+.matrix_input {
   padding: 5px;
   max-width: 4em;
   border-radius: 0;
